# tiny-chain

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/crypto/: base58.cpp  crypto.cpp  crypto.h
test/: CMakeLists.txt  tinychain_test.cpp
